<resources>
    <string name="app_name">Maestro Travel</string>
    <string name="image_url">http://maestrotravel.co.in/</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_personal">Home</string>
    <string name="nav_fee">About Uttarakhand</string>
    <string name="nav_library">About Us</string>
    <string name="nav_attendance">Feedback</string>
    <string name="nav_time">LogOut</string>
    <string name="new_tab">Where You want to go</string>
    <string name="facebook_app_id">148552399100547</string>
    <string name="fb_login_protocol_scheme">fb148552399100547</string>


    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">LOGIN</string>
    <string name="maestro">Maestro Travel Ventures Private Limited was born out of a need for bringing back learning in education. The concept of educational travel can be traced back to the Grand tour of the 18th century. The seminal work of Brent Ritchie in 2003 has been instrumental in bringing the focus back on purposeful learning while travelling.

Supported by academicians both from k12 And Higher Education establishments this startup recognized by Government of India, is beginning to add a new dimension to education travel with a strong focus on education first.

Learning Travel Continuum as devised by Richie revolves around the following three pivots.

    Tourism first – General Interest while Traveling
    Learning travel programs-Affiliated and Unaffiliated Group Travel
    Education first - purposeful learning and travelling

 And it is here Maestro Travels ventures is making a difference by taking active steps in bringing learning back into travel.
</string>
    <string name="title_activity_maps">Map</string>
    <string name="log_out_user">Log out user</string>
    <string name="back_again">Press back again to exit</string>


    <string name="user_details">User details</string>
    <string name="abt">Uttarakhand officially the State of Uttarakhand (Uttarākhaṇḍ Rājya), formerly known as Uttaranchal, is a state in the northern part of India. It is often referred to as the Devbhumi (literally "Land of the Gods") due to many Hindu temples and pilgrimage centres found throughout the state. Uttarakhand is known for the natural environment of the Himalayas, the Bhabhar and the Terai. On 9 November 2000, Uttarakhand became the 27th state of the Republic of India, being created from the Himalayan and adjoining northwestern districts of Uttar Pradesh. It borders Tibet to the north; the Mahakali Zone of the Far-Western Region, Nepal to the east; and the Indian states of Uttar Pradesh to the south and Himachal Pradesh to the west and north-west as well as Haryana on its south-western corner. The state is divided into two divisions, Garhwal and Kumaon, with a total of 13 districts. The interim capital of Uttarakhand is Dehradun, the largest city of the state, which is a railhead. The High Court of the state is located in Nainital.
Archaeological evidence supports the existence of humans in the region since prehistoric times. The region formed a part of the Kuru and the Panchal kingdoms (mahajanpads) during the Vedic age of Ancient India. Among the first major dynasties of Kumaon were the Kunindas in the 2nd century BCE who practised an early form of Shaivism. Ashokan edicts at Kalsi show the early presence of Buddhism in this region. During the medieval period, the region was consolidated under the Kumaon Kingdom and Garhwal Kingdom. In 1816, most of modern Uttarakhand was ceded to the British as part of the Treaty of Sugauli. Although the erstwhile hill kingdoms of Garhwal and Kumaon were traditional rivals, the proximity of different neighboring ethnic groups and the inseparable and complementary nature of their geography, economy, culture, language, and traditions created strong bonds between the two regions which further strengthened during the Uttarakhand movement for statehood in the 1990s.
The natives of the state are generally called Uttarakhandi, or more specifically either Garhwali or Kumaoni by their region of origin. According to the 2011 Census of India, Uttarakhand has a population of 10,086,292, making it the 19th most populous state in India.
</string>
    <string name="forget">Forget Password </string>


</resources>
