<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <group android:checkableBehavior="single"



        android:id="@+id/student">



        <item
            android:id="@+id/nav_personal"
            android:icon="@drawable/ic_home_black_24dp"




            android:title="@string/nav_personal"
            />
        <item
            android:id="@+id/nav_fee"
android:icon="@drawable/ic_forum_black_24dp"
            android:title="@string/nav_fee" />
        <item
            android:id="@+id/nav_circular"
            android:icon="@drawable/ic_language_black_24dp"

            android:title="@string/nav_circular"
            />

        <item
            android:id="@+id/nav_library"

            android:icon="@drawable/ic_edit_location_black_24dp"



            android:title="@string/nav_library" />
        <item
            android:id="@+id/nav_attendence"

            android:icon="@drawable/ic_mode_edit_black_24dp"



            android:title="@string/nav_attendance" />
        <item
            android:id="@+id/nav_time"
            android:icon="@drawable/ic_arrow_back_black_24dp"


            android:title="@string/nav_time" />


    </group>








</menu>
